[tool.poetry]
name = "stoh"
version = "0.1.0"
description = ""
authors = ["jack <jack>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
requests = "^2.28.2"
isort = "^5.12.0"
lxml = "^4.9.2"

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
axblack = "^20220330"
pylint = "^2.17.0"
ruff = "^0.0.257"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
